--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .terraform.lock.hcl
 ./terraform-task1/.terraform/
 ./terraform-task1/.terraform.lock.hcl
+./terraform-task2/.terraform/
+./terraform-task2/.terraform.lock.hcl
